# cpp_utils

./: .gitignore  CMakeLists.txt
cmake/: StandardProjectSettings.cmake
cpp_utils/: CMakeLists.txt
cpp_utils/algorithms/: CMakeLists.txt
cpp_utils/algorithms/include/algorithms/: optional_ext.h  string_ext.h
cpp_utils/datastructures/: CMakeLists.txt  CMakeLists.txt.orig
cpp_utils/datastructures/include/datastructures/: TreeMap.h
cpp_utils/include/algorithms/: alg_ext.h  ranges_ext.h
cpp_utils/include/cpp_utils/algorithms/: string_ext.h
cpp_utils/include/cpp_utils/datastructures/: ImmutableTree.h  LinearTree.h  Tree.h  TreeCommon.h  TreeMap.h  UniqueElementsTree.h
cpp_utils/include/cpp_utils/patterns/: Mediator.h  Observer.h  State.h
cpp_utils/include/cpp_utils/types/: NamedType.h
cpp_utils/include/datastructures/: ImmutableTree.h  Tree.h  Tree.h.orig  TreeCommon.h
cpp_utils/include/patterns/: Converter.h
cpp_utils/patterns/: CMakeLists.txt
cpp_utils/tests/: CMakeLists-gtest.txt  CMakeLists.txt
cpp_utils/tests/algorithms/: CMakeLists.txt  test_find_adjacent.cpp  test_fold.cpp  test_monadic_optional.cpp  test_slide.cpp  test_string_utils.cpp
cpp_utils/tests/datastructures/: CMakeLists.txt  CMakeLists.txt.orig  test_immutable_tree.cpp  test_tree.cpp  test_tree.cpp.orig  test_tree_map.cpp  test_trees.cpp  test_unique_elements_tree.cpp
cpp_utils/tests/patterns/: CMakeLists.txt  common_state.h  test_converter.cpp  test_mediator.cpp  test_observer.cpp  test_state_external_transitions.cpp  test_state_transitions.cpp
cpp_utils/types/: CMakeLists.txt
cpp_utils/types/include/types/: NamedType.h
